# pinns-lib

./: LICENSE  PDEproblem.py  README.md  pyproject.toml  requirements.txt  setup.py  trainer.py  utils.py  visualizer.py
.github/workflows/: ci.yml  python-publish.yml
PINNlib/: PINNModel.py  setup.py  visualizer.py
PINNlib/examples/: burgers.py  heat.py
__pycache__/: visualizer.py
examples/: burgers.py  demo_short.py  heat.py
src/pinns_lib/: __init__.py  model.py  problem.py  trainer.py  utils.py  visualizer.py
